--- a/config.conf
+++ b/config.conf
@@ -2,13 +2,13 @@
 #开始在一起的日期，格式参考 2022-06-24
 start_date=2022-06-24
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city1=昆明
+city1=湘潭
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city2=腾冲
+city2=昭阳
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
-birthday_lover=07-21
+birthday_lover=09-03
 #你的生日,注意格式只写*月*日 如："07-21"
-birthday_my=05-04
+birthday_my=03-29
 #以下为微信测试号的参数，在申请时会显示
 app_id=wx0deebd35b3317744
 app_secret=f91450e062218cd96be04eb78ace007f
